<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/biblioteca"
        android:title="@string/biblioteca"
        android:icon="@drawable/biblioteca"
        app:iconTint="@color/white" />
    <item
        android:id="@+id/atualizacao"
        android:title="@string/atualiza_o"
        android:icon="@drawable/atualizacao"
        app:iconTint="@color/white" />
    <item
        android:id="@+id/historico"
        android:title="@string/hist_rico"
        android:icon="@drawable/historico"
        app:iconTint="@color/white" />
    <item
        android:id="@+id/navegar"
        android:title="@string/navegar"
        android:icon="@drawable/navegar"
        app:iconTint="@color/white" />
    <item
        android:id="@+id/mais"
        android:title="@string/mais"
        android:icon="@drawable/mais"
        app:iconTint="@color/white" />

</menu>